# DataPipeline

./: README.md  pyproject.toml
examples/: data_config.json  reverse_parser_usage.py  usage.py
examples/sample_data/: sample_openai.jsonl  sample_openai_alpaca.jsonl  sample_openai_chatml.json  sample_openai_openai_chat.jsonl  sample_openai_sharegpt.jsonl
src/data_formatter/: __init__.py  converter.py  ir.py  registry.py
src/data_formatter/parsers/: __init__.py  base.py  csv_parser.py  json_parser.py  jsonl_parser.py  yaml_parser.py
src/data_formatter/reverse_parser/: __init__.py  exceptions.py  parser.py  template_spec.py
src/data_formatter/reverse_parser/templates/: __init__.py  chatml.py  llama2.py
src/data_formatter/stylings/: __init__.py  alpaca.py  base.py  chatml.py  openai_chat.py  sharegpt.py  text_label.py
src/data_formatter/transformers/: __init__.py  base.py  context_prompt.py
src/data_formatter/utils/: __init__.py  config.py  detector.py  naming.py
src/data_formatter/writers/: __init__.py  base.py  csv_writer.py  json_writer.py  jsonl_writer.py  yaml_writer.py
